--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> HELLO WORLD </h1>
+    <h1>SEER Database</h1>
+    <h2>Description</h2>
+    
 </body>
 </html>
