--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<>
     <h1>SEER Database</h1>
     <h2>Description</h2>
-    
+    <p>THIS IS A SECOND TEST :)</p>
+
 </body>
 </html>
