--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>SEER Database</h1>
     <h2>Description</h2>
     <p>THIS IS A SECOND TEST :)</p>
+    <p> Third test by bernberns </p>
 
 </body>
 </html>
