--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEER Database</title>
-</head>
-    <h1>SEER Database</h1>
+    <body>
+        <script src="indexJS.js"></script>
+        <style type="indexCSS.css"></style>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>SEER Database</title>
+        </head>
+        <h1>SEER Database</h1>
 
-  <form>
         <label for="description">Description </label>
         <input type="text" placeholder="description of the search " id="description" name="description"><br>
 
@@ -16,13 +18,16 @@
         <input type="date" placeholder="now " id="enddate" name="enddate"><br>
 
         If
-        <select id="searchablefields" name="searchablefields">
-            <option value="name of Field">name of Field</option>
-            <option value="Article title">Article title</option>
-            <option value="Article source">Article source</option>
-            <option value="Author">Author</option>
+        <select id="searchFields" onchange="setValueField()">
+            <option value="fieldName">name of Field</option>
+            <option value="1">Article title</option>
+            <option value="2">Article source</option>
+            <option value="3">Author</option>
+            <option value="4">SE Method</option>
+            <option value="5">SE Methodology</option>
         </select>
-        <select id="operator" name="operator">
+
+        <select id="operator">
             <option value="operator">contains</option>
             <option value="doesnotcontain">does not contain</option>
             <option value="beginswith">begins with</option>
@@ -32,12 +37,9 @@
             <option value="islessthanorequalto">is less than or equal to</option>
             <option value="ismorethan">is more than</option>
             <option value="ismorethanorequalto">is more than or equal to</option>
-        </select>
-        <select id="value" name="value">
-            <option value="value">value</option>
-        </select>
-    </form>
-    
-    
-</body>
+        </select> 
+        <span id="value"></span><br>
+        <button type="button" id="queryBttn" onclick="getQuery()">Query</button>
+        <p id="queryVal"></p>
+    </body>
 </html>
