changed file names

--- a/main_page.html
+++ b/main_page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <script src="indexJS.js"></script>
-        <style type="indexCSS.css"></style>
+        <script src="main_pageJS.js"></script>
+        <style type="main_pageCSS.css"></style>
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
