added a submit function to the submit page

--- a/public/html/submitter.html
+++ b/public/html/submitter.html
@@ -1,1 +1,13 @@
-Submitter
+<!DOCTYPE html>
+<html lang="en">
+    <body>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Submission</title>
+        </head>
+        <h1>Submit New Entries</h1>
+        
+        <input type="file" id="submissionText" name="submissionFile">
+    </body>
+</html>
